--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ section.about {
   min-width: 40%;
   width: 550px;
   height: 700px;
-  background: url(/img/profile-picture.png) no-repeat center / cover;
+  background: url(/img/mai17h-2021.png) no-repeat center / cover;
   background-position: -100px 0;
   transform: scalex(-1);
   border-radius: 8px;
