--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ main {
   flex-wrap: wrap;
   width: auto;
   height: 700px;
-  background-image: url(/img/background.png);
+  background-image: url('/Users/damiancoz/Sites/damianroiz/img/background.png');
   background-position: center;
   background-size: cover;
   min-width: 900px;
@@ -220,7 +220,7 @@ section.about {
 }
 
 .about-container {
-  width: 70%;
+  width: 88%;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -231,7 +231,7 @@ section.about {
   min-width: 40%;
   width: 550px;
   height: 700px;
-  background: url(/img/mai17h-2021.png) no-repeat center / cover;
+  background: url('/Users/damiancoz/Sites/damianroiz/img/about-image.png') no-repeat center / cover;
   background-position: -100px 0;
   transform: scalex(-1);
   border-radius: 8px;
@@ -244,7 +244,7 @@ section.about {
 }
 
 .about-right {
-  width: 60%;
+  width: 100%;
   min-height: 400px;
   background-color: #303036;
   color: #fff;
@@ -262,7 +262,7 @@ section.about {
 @media only screen and (max-width: 900px) {
   .about-container {
     flex-direction: column;
-    flex-wrap: wrap;
+    wrap: wrap;
     overflow-y: auto;
   }
 
@@ -337,48 +337,7 @@ section.about {
   letter-spacing: px;
 }
 
-/* services */
-
-/* .service-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  margin-bottom: 10px;
-} */
-
-/* .service {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-content: center;
-  width: 300px;
-  height: 620px;
-  background-color: #303036;
-  border: 5px solid #151515;
-  border-radius: 20px;
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.3);
-  margin: 30px;
-  padding: 30px;
-  text-align: center;
-}
-
-.service h3 {
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: #fff;
-  font-size: 30px;
-  margin: 20px 10px;
-}
-
-.service p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  letter-spacing: 1px;
-  color: #fff;
-} */
+/* service area */
 
 .service-container {
   display: flex;
@@ -391,20 +350,12 @@ section.about {
   /* padding-right: 15em; */
 }
 
-/* .service-card {
-  display: grid;
-  min-height: 100vh;
-  place-items: center;
-  line-height: 1.6;
-  padding-right: 15em;
-} */
-
 .service-card {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   background-color: #303036;
-  background-image: url(/img/service-image.png);
+  background-image: url('/Users/damiancoz/Sites/damianroiz/img/kettlebell-programs.png');
   background-size: cover;
   width: 300px;
   height: 550px;
