--- a/css/styles.css
+++ b/css/styles.css
@@ -497,7 +497,7 @@ footer {
 }
 
 .box h2 {
-  font-size: 1.125rem;
+  font-size: 19px ;
   font-weight: 600;
   text-transform: uppercase;
   color: #1e90ff;
