--- a/css/styles.css
+++ b/css/styles.css
@@ -124,39 +124,13 @@ nav ul li.btn.hide i:before {
 
 /* main section */
 
-main {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: auto;
-  height: 700px;
+.welcome {
+  width: 100%;
+  height: 600px;
   background-image: url("/img/background.png");
   background-position: center;
   background-size: cover;
-  min-width: 900px;
-  position: relative;
-  padding: 30px;
-}
-
-.main-container {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;
-  align-items: start;
-}
-
-.main-container div {
-  padding-top: 20px;
-}
-
-.box-1 {
-  flex: 2;
-}
-
-.box-2 {
-  flex: 1;
-  order: 2;
+  background-blend-mode: #333333;
 }
 
 h2 {
