--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,8 @@ section.about {
 @media only screen and (max-width: 900px) {
   .about-container {
     flex-direction: column;
+    width: 100%;
+    height: 100%;
     flex-wrap: wrap;
     overflow-y: auto;
   }
