--- a/css/styles.css
+++ b/css/styles.css
@@ -381,9 +381,8 @@ h4 {
   About
   /////////////////////// */
 
-section.about {
-  min-height: 50vh;
-  margin: 50px 0;
+.about-section {
+  min-height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -391,7 +390,8 @@ section.about {
 }
 
 .about-container {
-  width: 88%;
+  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -399,11 +399,10 @@ section.about {
 }
 
 .about-left {
-  min-width: 40%;
-  width: 550px;
+  width: 40%;
   height: 700px;
   background: url("/img/about-image.png") no-repeat center / cover;
-  background-position: -100px 0;
+  background-position: -90px 0;
   transform: scalex(-1);
   border-radius: 8px;
   transition: 1s;
@@ -411,50 +410,23 @@ section.about {
 
 .about-left:hover {
   background-position: -110px -10px;
-  /* background-position: center; */
+  background-position: center;
 }
 
 .about-right {
-  width: 100%;
+  width: 60%;
   min-height: 400px;
   background-color: #303036;
-  color: #fff;
-  padding: 30px;
+  color: var(--main-white);
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 30px;
   border: 3px solid #151515;
-  border-radius: 10px;
+  border-radius: 8px;
   margin-left: -120px;
   z-index: 1;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.3);
-}
-
-@media only screen and (max-width: 900px) {
-  .about-container {
-    flex-direction: column;
-    flex-wrap: wrap;
-    overflow-y: auto;
-  }
-
-  .about-left {
-    min-width: 350px;
-    background-position: -200px -10px;
-    width: 60%;
-    flex: 1 1 auto;
-  }
-
-  .about-left:hover {
-    background-position: -220px -20px;
-    /* background-position: center; */
-  }
-
-  .about-right {
-    min-width: 400px;
-    width: 40%;
-    margin: -150px;
-    flex: 2 2 auto;
-  }
 }
 
 .about-right h1 {
@@ -466,7 +438,7 @@ section.about {
 .about-right h2 {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  color: #1e90ff;
+  color: var(--blue-primary);
   font-size: 50px;
   margin: 0 30px 30px 0;
 }
@@ -496,10 +468,9 @@ section.about {
 
 .about-btn a {
   text-decoration: none;
-  color: #fff;
+  color: var(--main-white);
   letter-spacing: 1px;
-  display: block;
-  width: 100%;
+  display: inline-block;
 }
 
 .about-btn:hover,
@@ -512,6 +483,26 @@ section.about {
 .about-btn:hover a,
 .about-btn:focus a {
   color: var(--blue-primary);
+}
+
+@media only screen and (max-width: 768px) {
+  .about-container {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 20px;
+  }
+
+  .about-left {
+    width: 90%;
+    height: 600px;
+    background-position: center;
+  }
+
+  .about-right {
+    width: 100%;
+    margin: -100px 0 0 0;
+    align-self: center;
+  }
 }
 
 /* //////////////////////
